--- a/JS3/js3.html
+++ b/JS3/js3.html
@@ -7,16 +7,14 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" href="js3.css" />
-    <title>JS3 - Foundations</title>
+    <title>JS3 - Objects</title>
   </head>
   <body>
-    <h1>JS3 - Foundations</h1>
-
-		<h1 class="display">Friends List</h1>
-		Name: <input class="friendInput" type="text">
-		Age: <input class="ageInput" type="text">
+    <h1>JS3 - Objects</h1>
 
 	<script>
+
+
 		</script>
 
     <script src="js3.js"></script>
