--- a/JS3/js3.html
+++ b/JS3/js3.html
@@ -12,8 +12,8 @@
   <body>
     <h1>JS3 - Objects</h1>
 
+		<div class="container"></div>
     <script>
-
     </script>
 
     <script src="js3.js"></script>
