--- a/JS0/js0.html
+++ b/JS0/js0.html
@@ -15,6 +15,50 @@
     <h1>JS0 - Foundations</h1>
 
 		<script>
+// -- VARIABLES --
+console.log('html file')
+const fi = 5
+const mission = fi + 1
+const deed = fi + mission
+const space = 8 * 8
+const ship = space / 4
+
+// -- NUMBERS --
+console.log(fi, 'fi')
+console.log(mission, 'mission')
+console.log(deed, 'dee')
+console.log(space, 'space')
+console.log(ship, 'ship')
+
+// -- STRINGS --
+const hello = "I have 500 bucks"
+let a = "hello"
+a = hello
+console.log(hello, "hello")
+
+const a1 = "hello"
+const message = a1 + 'world'
+const c = 5
+const d = c + message
+const e = '<h1>' + a1 + '</h1>'
+
+console.log(message, 'message')
+console.log(d, 'd')
+console.log(e, 'e')
+
+const firstName = 'Tony'
+const lastName = 'Stark'
+const location1 = 'Paris'
+const message2 = "Welcome"
+
+console.log(message2, 'message') 
+const actor = "We"
+const location3 = "farmer's market"
+const story = `${actor} plan to go to a ${location3} tomorrow`
+
+// -- BOOLEANS--
+
+console.log(" ")
 		</script>
 
 		<script src="js0.js"></script>
