--- a/JS4/js4.html
+++ b/JS4/js4.html
@@ -7,9 +7,13 @@
     <title>JS4.html</title>
   </head>
   <body>
+
 		<h1>JS4 Front End Engineering</h1>
 		<div class="container"></div>
-		<script></script>
+
+		<script>
+
+		</script>
 		<script src="js4.js"></script>
  </body>
 </html>
