--- a/JS4/HTML/Libraries/RoughJS.html
+++ b/JS4/HTML/Libraries/RoughJS.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hello, world!</title>
+
+    <title>RoughJS.html</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
- </body>
+    <h1>Rough JS</h1>
+		<p>Helps draw sketches on your website</p>
+  </body>
 </html>
+
