--- a/JS4/HTML/Libraries/RoughJS.html
+++ b/JS4/HTML/Libraries/RoughJS.html
@@ -1,14 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <title>RoughJS.html</title>
   </head>
   <body>
     <h1>Rough JS</h1>
-		<p>Helps draw sketches on your website</p>
+    <p>Helps draw sketches on your website</p>
+    <canvas class="canvas" width="800" height=500></canvas>
+		<script src="https://cdn.jsdelivr.net/npm/roughjs@3.1.0/dist/rough.min.js"></script>
+
+    <script>
+const rc = rough.canvas(document.querySelector('.canvas'))
+rc.rectangle(10, 10, 200, 200)
+rc.ellipse(300, 100, 150, 80)
+rc.line(80, 120, 300, 100)
+rc.circle(50, 50, 80, { fill: 'red'})
+
+rc.rectangle(120, 106, 80, 80, {
+	fill: 'rgba(200,0,200,0.9)',
+	fillStyle: 'solid'
+})
+		</script>
   </body>
 </html>
-
