--- a/JS4/js4.html
+++ b/JS4/js4.html
@@ -9,7 +9,7 @@
   <body>
 
 		<h1>JS4 Front End Engineering</h1>
-		<div class="container"></div>
+		<div style="width:300px;" class="container"></div>
 
 		<script>
 
