--- a/JS2/HTML/one.html
+++ b/JS2/HTML/one.html
@@ -4,25 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>exercise1.html</title>
+    <title>change me</title>
   </head>
   <body>
-
-    <h1>Create an HTML element</h1>
-		<input class="type" type="text" />
-		<h1 class="change"></h1>
+    <h1 class="change">change me</h1>
+		<input class="type" />
 		<button class="submit">Submit</button>
 
 		<script>
 const type = document.querySelector('.type')
-const change = document.querySelector('.change')
 const submit = document.querySelector('.submit')
+const change = document.querySelector('.change')
 
 submit.addEventListener('click', () => {
-	const val = type.value
-	change.innerText = val
+	const value = type.value
+
+	change.innerText = value
 })
 		</script>
   </body>
 </html>
-
