--- a/JS3/HTML/two.html
+++ b/JS3/HTML/two.html
@@ -13,31 +13,31 @@
     <h1>TODO LIST</h1>
     <input class="type" type="text" />
     <button class="add">Add</button>
-    <div class="todos"></div>
+    <div class="container"></div>
 
     <script>
-    const render = () => {
-      const type = document.querySelector('.type');
-      const add = document.querySelector('.add');
-      const todos = document.querySelector('.todos');
+      const render = () => {
+        const type = document.querySelector('.type');
+        const add = document.querySelector('.add');
+        const container = document.querySelector('.container');
 
         add.addEventListener('click', () => {
           const value = type.value;
           if (value.trim() !== '') {
-            todos.innerHTML += `<h2 class="todo">${value}</h2>`;
+            container.innerHTML += `<h2 class="todo">${value}</h2>`;
+
+            const todoArr = document.querySelectorAll('.todo');
+            console.log('todo arr', todoArr);
+
+            todoArr.forEach((e, i) => {
+              e.onclick = () => {
+                console.log('e was clicked', e);
+                console.log('index: ', i);
+								arr.splice(i, 1) // splice throws an error
+                render();
+              };
+            });
           }
-
-          const todoArr = todos.querySelectorAll('.todo');
-					console.log('todo arr', todoArr)
-
-          todoArr.forEach((e, i) => {
-            e.onclick = () => {
-
-							console.log('e was clicked', e)
-              todoArr.slice(i, 1);
-              render();
-            };
-          });
         });
       };
 
