--- a/JS3/HTML/four.html
+++ b/JS3/HTML/four.html
@@ -1,12 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <title>four.html</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>TODO LIST Part 3: Filter</h1>
+    <input class="filterInput" type="text" />
+    <button class="filter">Filter</button>
+    <input class="type" type="text" />
+    <button class="add">Add</button>
+    <div class="container"></div>
+
+		<script src="four.js"></script>
   </body>
 </html>
