--- a/JS3/HTML/two.html
+++ b/JS3/HTML/two.html
@@ -10,13 +10,13 @@
     <title>two.html</title>
   </head>
   <body>
+
     <h1>TODO LIST</h1>
     <input class="type" type="text" />
     <button class="add">Add</button>
     <div class="container"></div>
 
     <script>
-      const render = () => {
         const type = document.querySelector('.type');
         const add = document.querySelector('.add');
         const container = document.querySelector('.container');
@@ -24,24 +24,16 @@
         add.addEventListener('click', () => {
           const value = type.value;
           if (value.trim() !== '') {
-            container.innerHTML += `<h2 class="todo">${value}</h2>`;
+            const div = document.createElement('h3');
+            div.innerText = `${value}`;
 
-            const todoArr = document.querySelectorAll('.todo');
-            console.log('todo arr', todoArr);
-
-            todoArr.forEach((e, i) => {
-              e.onclick = () => {
-                console.log('e was clicked', e);
-                console.log('index: ', i);
-								arr.splice(i, 1) // splice throws an error
-                render();
-              };
+            div.addEventListener('click', () => {
+              div.remove();
             });
+
+            container.append(div);
           }
         });
-      };
-
-      render();
     </script>
   </body>
 </html>
