--- a/JS3/HTML/list2.html
+++ b/JS3/HTML/list2.html
@@ -18,15 +18,35 @@ const name = document.querySelector('.name')
 const age = document.querySelector('.age')
 const add = document.querySelector('.add')
 const container = document.querySelector('.container')
+const storage = localStorage.getItem('names') || '[]'
+const names = JSON.parse(storage)
+
+const render = () => {
+	container.innerHTML = ''
+	names.forEach((e, i) => {
+		const div = document.createElement('div')
+		div.innerHTML = `<h2>${e}</h2>`
+
+		div.addEventListener('click', () => {
+			div.remove()
+			names.splice(i, 1)
+			render()
+		})
+
+		container.append(div)
+	})
+}
 
 add.addEventListener('click', () => {
 	const nameVal = name.value
-	const ageVal = age.value
 
-	if (nameVal.trim() !== '' && ageVal.trim !== '') {
-		container.innerHTML += `<h2>${nameVal}<br/>${ageVal}</h2>` 
-	}
+	names.push(nameVal)
+	const newNames = JSON.stringify(names)
+	localStorage.setItem('names', newNames)
+	render()
 })
+
+render()
 		</script>
   </body>
 </html>
