--- a/JS4/MediaEle/exercise/five.html
+++ b/JS4/MediaEle/exercise/five.html
@@ -1,33 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <title>five.html</title>
   </head>
   <body>
+    <input class="type" type="text" />
+    <canvas class="canvas" width="800" height="500"></canvas>
 
-		<input class="type" type="text" />
-		<canvas class="canvas" width="800" height="500"></canvas>
+    <script>
+      const canvas = document.querySelector('.canvas');
+      const type = document.querySelector('.type');
+      let index = 0;
+      const colors = ['pink', 'yellow', 'lightgreen', 'lightblue', 'orange'];
 
-		<script>
-const canvas = document.querySelector('.canvas')
-const type = document.querySelector('.type')
+      const context = canvas.getContext('2d');
+      context.fillStyle = 'purple';
+      context.fillRect(0, 0, 800, 500);
 
-const context = canvas.getContext('2d')
-context.fillStyle = "yellow"
-context.fillRect(0, 0, 800, 500)
+      type.addEventListener('keyup', e => {
+        if (e.key === 'Enter') {
+          const value = type.value;
+          const letters = value.split('');
+          console.log('letters', letters);
 
-type.addEventListener('keyup', (e) => {
-	if (e.key === 'Enter') {
-		const value = type.value
-		context.font = "30px Comic Sans MS"
-		context.fillStyle = "black"
-		context.fillText(value, 10, 50)
-	}
-})
+          if (index === colors.length - 1) {
+            index = 0;
+          } else {
+            index += 1;
+          }
 
-		</script>
+          context.fillStyle = colors[index];
+          context.fillRect(0, 0, 800, 500);
+          context.font = '30px Comic Sans MS';
+          context.fillStyle = 'black';
+
+          const result = letters.forEach(e => {
+            const xCoord = Math.floor(Math.random() * 500);
+            const yCoord = Math.floor(Math.random() * 500);
+
+            console.log('X:', xCoord, 'Y:', yCoord);
+            context.fillText(e, xCoord, yCoord);
+          });
+        }
+      });
+    </script>
   </body>
 </html>
