--- a/JS4/MediaEle/exercise/four.html
+++ b/JS4/MediaEle/exercise/four.html
@@ -7,25 +7,20 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <style></style>
+
     <title>four.html</title>
   </head>
   <body>
     <input class="type" type="text" />
-
     <video class="video"></video>
-
-    <canvas class="canvas" width="800" height="500"></canvas>
-    <div class="imgContainer">
-		</div>
+    <canvas class="canvas" width="900" height="900"></canvas>
 
     <script>
       const type = document.querySelector('.type');
-      const canvas = document.querySelector('.canvas');
       const videoElement = document.querySelector('.video');
-      const imgContainer = document.querySelector('.imgContainer');
+      const canvas = document.querySelector('.canvas');
       const context = canvas.getContext('2d');
-      context.font = '30px Comic Sans MS';
-      context.fillStyle = 'black';
 
       navigator.mediaDevices
         .getUserMedia({
@@ -39,13 +34,12 @@
 
       type.addEventListener('keyup', e => {
         if (e.key === 'Enter') {
-					context.fillText("", 10, 50)
-          imgContainer.innerHTML = '';
-          const value = type.value;
-          const img = document.createElement('img');
-          img.src = videoElement.srcObject;
-          context.fillText(value, 10, 50);
-          imgContainer.append(img);
+          const message = type.value;
+          context.drawImage(videoElement, -10, -10);
+
+          context.font = '50px Comic Sans';
+          context.fillStyle = 'lightgreen';
+          context.fillText(message, 90, 400);
         }
       });
     </script>
