--- a/JS2/HTML/additionalExe/two.html
+++ b/JS2/HTML/additionalExe/two.html
@@ -1,28 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <title>Chat messages</title>
   </head>
   <body>
-		<input class="type" type="text" />
-		<button class="submit">Submit</button>
+    <input class="type" type="text" />
+    <button class="submit">Submit</button>
     <h1 class="message"></h1>
 
-		<script>
-const type = document.querySelector('.type')
-const submit = document.querySelector('.submit')
-const message = document.querySelector('.message')
+    <script>
+      const type = document.querySelector('.type');
+      const submit = document.querySelector('.submit');
+      const message = document.querySelector('.message');
 
-
-submit.addEventListener('click', () => {
-	const value = type.value
-	if (value) {
-		message.innerHTML += value + '<br/>'
-	}
-})
-		</script>
+      submit.addEventListener('click', () => {
+        const value = type.value;
+        if (value) {
+          message.innerHTML += value + '<br/>';
+        }
+      });
+    </script>
   </body>
 </html>
