--- a/JS2/HTML/eight.html
+++ b/JS2/HTML/eight.html
@@ -6,28 +6,41 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
     <title>Stopwatch</title>
   </head>
   <body>
     <h1 class="watch">00:00</h1>
-		<button class="start">Start</button>
+    <button class="start">Start</button>
 
-		<script>
-const watch = document.querySelector('.watch')
-const start = document.querySelector('.start')
+    <script>
+      const watch = document.querySelector('.watch');
+      const startButton = document.querySelector('.start');
+      let timeVal = 0;
+      let start = false
 
-start.addEventListener('click', () => {
-	let timer = 0
+      startButton.addEventListener('click', () => {
+        if (start) {
+          return;
+        }
+        start = true;
+        startTimer();
+      });
 
-	setInterval(() => {
-	  const sec = Math.floor(timer / 10)
-	  const mili = Math.floor(timer % 60)
-		timer++
-		console.log('t', timer)
-		watch.innerHTML = `${sec}:${mili}`
-	}, 100)
-})
-		</script>
+      const startTimer = () => {
+        setTimeout(() => {
+          timeVal = timeVal + 10;
+          display(timeVal);
+          startTimer();
+        }, 10);
+      };
+
+      const display = num => {
+        const sec = Math.floor(num / 1000);
+        const mili = Math.floor(num / 60);
+        const secs = sec > 9 ? `${sec}` : `0${sec}`;
+        const milis = mili > 9 ? `${mili}` : `0${mili}`;
+        watch.innerText = `${secs}:${milis}`;
+      };
+    </script>
   </body>
 </html>
