--- a/JS3/HTML/todo2.html
+++ b/JS3/HTML/todo2.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <title>three.html</title>
+    <title>todo2.html</title>
   </head>
   <body>
     <h1>TODO LIST Part 2: Save Todos</h1>
