--- a/JS3/HTML/todo3.html
+++ b/JS3/HTML/todo3.html
@@ -7,16 +7,84 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <title>four.html</title>
+    <title>todo3.html</title>
   </head>
   <body>
     <h1>TODO LIST Part 3: Filter</h1>
     <input class="filterInput" type="text" />
-    <button class="filter">Filter</button>
-    <input class="type" type="text" />
+    <button class="filterButton">Filter</button>
+    <input class="addInput" type="text" />
     <button class="add">Add</button>
     <div class="container"></div>
 
-		<script src="four.js"></script>
+    <script>
+      const filterInput = document.querySelector('.filterInput');
+      const filterButton = document.querySelector('.filterButton');
+
+      const addInput = document.querySelector('.addInput');
+      const add = document.querySelector('.add');
+      const container = document.querySelector('.container');
+
+      const storage = localStorage.getItem('list') || '[]';
+      const todos = JSON.parse(storage);
+
+      filterButton.addEventListener('click', () => {
+        const value = filterInput.value;
+        if (value.trim() !== '') {
+          const result = todos.filter(e => {
+            return e === value;
+          });
+          setStorage(result);
+        }
+        render();
+      });
+
+      const setStorage = arr => {
+        const list = JSON.stringify(arr);
+        localStorage.setItem('list', list);
+      };
+
+      const remove = element => {
+        const list = todos.filter(item => {
+          return item !== element.innerText;
+        });
+        setStorage(list);
+        element.remove();
+      };
+
+      const render = () => {
+        const storage = localStorage.getItem('list') || '[]';
+        const newList = JSON.parse(storage);
+
+        container.innerHTML = '';
+        newList.forEach(e => {
+          const div = document.createElement('h3');
+          div.innerText = e;
+          div.addEventListener('click', () => {
+            remove(div);
+          });
+          container.append(div);
+        });
+      };
+
+      add.addEventListener('click', () => {
+        const value = addInput.value;
+
+        if (value.trim() !== '') {
+          const div = document.createElement('h3');
+          div.innerText = value;
+          todos.push(value);
+          setStorage(todos);
+
+          div.addEventListener('click', () => {
+            remove(div);
+          });
+
+          container.append(div);
+        }
+      });
+
+      render();
+    </script>
   </body>
 </html>
