--- a/JS3/HTML/list2.html
+++ b/JS3/HTML/list2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>four.html</title>
+    <title>list2.html</title>
   </head>
   <body>
     <h1>Friends List</h1>
