--- a/JS4/MediaEle/exercise/three.html
+++ b/JS4/MediaEle/exercise/three.html
@@ -17,7 +17,6 @@ const start = document.querySelector('.start')
 const video = document.createElement('video')
 const timer = document.createElement('h1')
 
-
 const solution = () => {
 	setTimeout(() => {
 		const curr = video.currentTime
@@ -34,8 +33,11 @@ start.addEventListener('click', () => {
 	container.innerHTML = ''
 	video.addEventListener('mouseenter', () => {
 		video.src = "https://songz.c0d3.com/js4/examples/ankurBunny.mp4"
-		video.play()
 		solution()
+	})
+
+	video.addEventListener('mouseenter', () => {
+		video.play()
 	})
 
 	video.addEventListener('mouseleave', () => {
