--- a/JS4/CSS/flexBox/space-between.html
+++ b/JS4/CSS/flexBox/space-between.html
@@ -1,3 +1,4 @@
+<title>space-between</title>
 <div class="box">
 	<h1 class="header header1">Group 1</h1>
 	<h1 class="header header2">Group 2</h1>
@@ -7,12 +8,12 @@
 <style>
 .box {
 	display: flex;
-	justify-content: space-center;
+	justify-content: space-between;
 }
 .header {
 	color: white;
+	width: 100px;
 	height: 100px;
-	width: 100%;
 	text-align: center;
 }
 .header1 {
