--- a/JS4/CSS/position/zIndex.html
+++ b/JS4/CSS/position/zIndex.html
@@ -4,30 +4,28 @@
 
 <style>
 .block {
-	z-index: -1;
+	z-index: 1;
 	position: absolute;
 	bottom: 0px;
 	right: 0px;
-	width: 90px;
-	height: 90px;
-	background: rgba(255, 255, 0, 1);
+	border: 5px solid blue;
 }
 .div1 {
 	z-index: 2;
-	width: 50px;
-	height: 50px;
-	background: rgba(255, 0, 0, 1);
+	width: 200px;
+	height: 200px;
+	background: red; 
 }
 .div2 {
 	z-index: 1;
-	width: 60px;
-	height: 60px;
-	background: rgba(0, 0, 255, 1);
+	width: 300px;
+	height: 300px;
+	background: purple; 
 }
 .div3 {
 	z-index: 0;
-	width: 70px;
-	height: 70px;
-	background: rgba(0, 0, 255, 1);
+	width: 400px;
+	height: 400px;
+	background: orange; 
 }
 </style>
