--- a/JS4/JavascriptCSS/exercises/one.html
+++ b/JS4/JavascriptCSS/exercises/one.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-		<link rel="stylesheet" type="text/css" href="one.css">
+    <link rel="stylesheet" type="text/css" href="one.css" />
 
     <title>one.html</title>
   </head>
@@ -17,16 +17,17 @@
       </video>
     </div>
 
-    <div class="lowerContainer">
-      <h3>Add Caption</h3>
-			<input class="captionInput" placeholder="Caption" type="text">
-			<input class="start" placeholder="Start(ms)" type="number">
-			<input class="end" placeholder="End(ms)" type="number">
-			<br/>
-			<button class="save">Save</button>
-			<hr/>
-			<div class="currentCaptions"></div>
-    </div>
-		<script src="one.js"></script>
+    <canvas class="canvas"></canvas>
+      <div class="lowerContainer">
+        <h3>Add Caption</h3>
+        <input class="captionInput" placeholder="Caption" type="text" />
+        <input class="start" placeholder="Start(ms)" type="number" />
+        <input class="end" placeholder="End(ms)" type="number" />
+        <br />
+        <button class="save">Save</button>
+        <hr />
+        <div class="currentCaptions"></div>
+      </div>
+    <script src="one.js"></script>
   </body>
 </html>
