--- a/JS4/JavascriptCSS/exercises/one.html
+++ b/JS4/JavascriptCSS/exercises/one.html
@@ -6,32 +6,165 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" type="text/css" href="one.css" />
 
-    <title>one.html</title>
+    <style>
+      .videoContainer {
+        width: 100%;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        background: rgba(20, 40, 50, 1);
+        text-align: center;
+      }
+      .vPlayer {
+        height: 400px;
+      }
+      .videoCaption {
+        position: absolute;
+        top: 10px;
+        background: rgba(20, 40, 50, 0.3);
+        font-size: 30px;
+        color: rgba(255, 255, 255, 1);
+        padding: 5px;
+        width: 100%;
+      }
+      .inputContainer {
+        width: 600px;
+        margin: 430px auto 20 auto;
+				z-index: 2;
+      }
+      .captionInput {
+        width: 300px;
+      }
+      .caption {
+        display: flex;
+        justify-content: space-between;
+      }
+      .caption h5 {
+        width: 100%;
+      }
+      .control {
+        width: 100px;
+      }
+    </style>
   </head>
   <body>
+    <div class="videoContainer">
+      <video
+        class="vPlayer"
+        src="./../../lastofus.mp4"
+        controls
+      ></video>
+      <div class="videoCaption"></div>
+    </div>
 
-		<div class="videoContainer">
-			<video class="vPlayer" src="./../../lastOfUs.mp4" controls></video>
-			<div class="videoCaption"></div>
-		</div>
+    <div class="inputContainer">
+      <h3>Add Caption</h3>
+      <input class="captionInput" type="text" placeholder="Caption" />
+      <input class="startInput" type="text" placeholder="Start (ms)" />
+      <input class="endInput" type="text" placeholder="End (ms)" />
+      <button class="submit">Save</button>
+      <hr />
+      <div class="captionList">
+        <div class="caption">
+          Hello World
+        </div>
+      </div>
+    </div>
 
-		<div class="inputContainer">
-			<h3>Add a Caption</h3>
-			<input class="captionInput" type="text" placeholder="Caption">
-			<input class="startINput" type="text" placeholder="Start (ms)">
-			<input class="endInput" type="text" placeholder="End (ms)">
-			<button class="submit">Save</button>
-			<hr>
-			<div class="captionList">
-				<div class="caption">
-					Starting...
-				</div>
-			</div>
-		</div>
+    <script>
+      const videoElement = document.querySelector('.vPlayer');
+      const videoCaption = document.querySelector('.videoCaption');
+      videoElement.addEventListener('timeupdate', evt => {
+        const curMS = videoElement.currentTime * 1000;
+        const captionsAfterCurrent = captions.filter(e => {
+          return e.start <= curMS;
+        });
+        const validCaptions = captionsAfterCurrent.filter(e => {
+          return e.end > curMS;
+        });
 
+        let captionText = '';
+        if (validCaptions.length) {
+          captionText = validCaptions[0].txt;
+        }
 
-    <script src="one.js"></script>
+        videoCaption.innerText = captionText;
+      });
+
+      let captions = [
+        {
+          txt: 'Playing Last of us',
+          start: 0,
+          end: 3000,
+        },
+        {
+          txt: 'Doggo chilling in the back',
+          start: 3000,
+          end: 7000,
+        },
+        {
+          txt: 'Dog is chilling HARD',
+          start: 7000,
+          end: 8000,
+        },
+        {
+          txt: 'Shredding',
+          start: 8000,
+          end: 13000,
+        },
+      ];
+
+      const captionList = document.querySelector('.captionList');
+
+      const render = () => {
+        captionList.innerHTML = captions.reduce((acc, e) => {
+          return (
+            acc +
+            `
+        <div class="caption">
+        <h5>${e.txt}</h5>
+        <p class="control startAt">${e.start}</p>
+        <p class="control endAt">${e.end}</p>
+        </div>
+      `
+          );
+        }, '');
+        const captionElementList = captionList.querySelectorAll('.caption');
+        captionElementList.forEach((e, i) => {
+          e.addEventListener('click', () => {
+            if (confirm(`Remove caption: ${captions[i].txt}?`)) {
+              captions.splice(i, 1);
+              render();
+            }
+          });
+        });
+      };
+      render();
+
+      const submitButton = document.querySelector('.submit');
+      const captionInput = document.querySelector('.captionInput');
+      const startInput = document.querySelector('.startInput');
+      const endInput = document.querySelector('.endInput');
+      submitButton.addEventListener('click', () => {
+        const captionTxt = captionInput.value;
+        if (captionTxt.length < 3) {
+          return;
+        }
+        const startTime = +startInput.value;
+        const endTime = +endInput.value;
+
+        if (!Number.isInteger(startTime) || !Number.isInteger(endTime)) {
+          return;
+        }
+
+        captions.push({
+          txt: captionTxt,
+          start: startTime,
+          end: endTime,
+        });
+        render();
+      });
+    </script>
   </body>
 </html>
