timmy living a lie

--- a/JS4/ClassObjects/exercises/four.html
+++ b/JS4/ClassObjects/exercises/four.html
@@ -13,23 +13,19 @@
     <style>
       div {
         position: relative;
-				display: block;
-				border: 1px solid black;
+        display: block;
+        border: 1px solid black;
       }
     </style>
 
     <title>four.html</title>
   </head>
   <body>
-		<h1>Class Name</h1>
-		<h3>Warrior</h3>
-    <div class="character warrior"></div>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<h3>Peasant</h3>
-    <div class="character"></div>
+    <h1>Class Name</h1>
+    <h3>Warrior</h3>
+    <div class="container"></div>
+    <script>
+      const container = document.querySelector('.container');
+    </script>
   </body>
 </html>
