--- a/JS4/ClassObjects/exercises/threePart2.html
+++ b/JS4/ClassObjects/exercises/threePart2.html
@@ -9,8 +9,8 @@
 
     <style>
       .square {
-        width: 20px;
-        height: 20px;
+        width: 50px;
+        height: 50px;
         display: inline-block;
         border: 1px solid black;
       }
@@ -19,7 +19,7 @@
         display: flex;
       }
     </style>
-    <title>three.html</title>
+    <title>threePart2.html</title>
   </head>
   <body>
     <h1>Box Generator</h1>
@@ -36,7 +36,7 @@
         const div = document.createElement('div');
         div.classList.add('square');
 				div.addEventListener('click', (e) => {
-					alert(`row: ${i+1} col: ${j+1}`)
+					div.innerText = (`row: ${i+1} col: ${j+1}`)
 				})
         rowDiv.append(div);
         return generateRows(row, rowDiv, j, i + 1);
